--- a/TimeRegistrering/.settings/org.eclipse.core.resources.prefs
+++ b/TimeRegistrering/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//app/views/index.scala.html=UTF-8
+encoding//app/views/responsive/categorizr.scala.html=UTF-8
 encoding//app/views/responsive/index.scala.html=UTF-8
 encoding/<project>=UTF-8
